--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
+    "react-hot-toast": "^2.4.0",
     "typescript": "4.9.3"
   }
 }
